--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,17 +1,31 @@
 @font-face {
-  font-family: Raleway;
-  src:
-    url(./Raleway-Regular.woff2) format('woff2'),
-    url(./Raleway-Regular.woff) format('woff');
-  font-weight: normal;
-  font-display: swap;
+    font-family: "EB Garamond";
+    src: url(./ebgaramondmedium.ttf) format(tryetype);
+    src: url(./ebgaramondregular.woff) format(woff);
+    src: url(./ebgaramondregular.woff2) format(woff2);
+    font-weight: 400;
 }
 
 @font-face {
-  font-family: Raleway;
-  src:
-    url(./Raleway-Bold.woff2) format('woff2'),
-    url(./Raleway-Bold.woff) format('woff');
-  font-weight: bold;
-  font-display: swap;
+    font-family: "EB Garamond";
+    src: url(./ebgaramondmedium.ttf) format(tryetype);
+    src: url(./ebgaramondmedium.woff) format(woff);
+    src: url(./ebgaramondmedium.woff2) format(woff2);
+    font-weight: 500;
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url(./interregular.ttf) format(tryetype);
+    src: url(./interregular.woff) format(woff);
+    src: url(./interregular.woff2) format(woff2);
+    font-weight: 400;
+}
+
+@font-face {
+    font-family: "Inter";
+    src: url(./interbold.ttf) format(tryetype);
+    src: url(./interbold.woff) format(woff);
+    src: url(./interbold.woff2) format(woff2);
+    font-weight: 700;
 }
