--- a/styles/style.css
+++ b/styles/style.css
@@ -83,6 +83,7 @@
 
 .aligned-text_center {
     text-align: center;
+    padding-right: 45px;
 }
 
 .aligned-text_right {
@@ -102,13 +103,15 @@
     position: relative;
     display: flex;
     justify-content: space-between;
-    padding: 135px 50px 50px 78px;
+    padding: 147px 50px 50px 78px;
+    align-items: center;
 }
 
 .cover__description-text {
     color: #FFF;
     text-transform: uppercase;
     word-spacing: 19.8px;
+    letter-spacing: 1.2px;
 }
 
 .bet-button {
@@ -250,7 +253,6 @@
     display: flex;
     flex-direction: column;
     font-size: 18px;
-    line-height: 1;
     list-style-type: none;
     align-items: center;
 }
